--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Tech Stack- HTML, CSS, Tailwind CSS, Javascript-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,6 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Pacifico&display=swap" rel="stylesheet">
+  <!-- CSS Design -->
   <style>
     @keyframes gradientBG {
       0% {
